k8s/two-tier-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: two-tier-app
  labels:
    app: two-tier-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: two-tier-app
  template:
    metadata:
      labels:
        app: two-tier-app
    spec:
      containers:
      - name: two-tier-app-pod
        image: ali0322/flaskapp:latest
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
