k8s/two-tier-app-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: two-tier-app-pod
spec:
  containers:
  - name: two-tier-app-pod
    image: ali0322/flaskapp:latest
    ports:
      - containerPort: 5000
    imagePullPolicy: Always
