k8s/two-tier-app-LB-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: two-tier-app-loadbalancer-service
spec:
  selector:
    app: two-tier-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
