k8s/two-tier-app-int-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: two-tier-app-internal-service
spec:
  selector:
    app: two-tier-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
