k8s/ingress-with-ip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  rules:
#  - host: myapp.local
  - host: 192.168.18.140
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: two-tier-app-internal-service
            port:
              number: 80
